# public_projects

./: README.md  data_collect.py  session_1.txt  session_2.txt
games/: README.md
games/poker/ACR/: Makefile  README.md  data_collect.py  summ.c  summ.h  summ_func.c
games/poker/ACR/program/: Makefile  data_collect.py  summ  summ.c
games/poker/ACR/session_summary/: README.md  session.txt
games/poker/ACR/summary/: Makefile  README.md  (+1 more)
graduate_work/: README.md
graduate_work/nba_data_miner/: README.md  pyproject.toml
graduate_work/nba_data_miner/docs/: make.bat
graduate_work/nba_data_miner/src/nba_data_miner/: __init__.py  compare.py  helper_functions.py  search.py
graduate_work/nba_data_miner/tests/: test_nba_data_miner.py
graduate_work/sports_analytics/: Sports_Analytics_NFL_Big_Data_Bowl_Analysis.ipynb
graduate_work/sports_analytics/Code/: NFL 10 Year Onside Kick Data.xlsx  SportsAnalytics.py  kicker_data-2.xlsx
other_projects/: README.md
other_projects/bond_price_calculator/: Makefile  README.md  price.c
other_projects/personal_website/react-app/: package-lock.json  package.json
other_projects/web_scraping/email_list_generator/: data_script.py
undergraduate_work/: README.md
undergraduate_work/C/list_test/: README.md  mylist-test.c
undergraduate_work/C/node_list/: Makefile  mylist.c
undergraduate_work/C/qsort_function/: Makefile  README.md  isort.c
undergraduate_work/C/relatively_prime_check/: Makefile  README.md  gcd.h  main.c  prime.h
undergraduate_work/advanced_programming_in_C/relatively_prime_check/: README.md  gcd.c  prime.c
(+51 files in other folders)
